[package]
name = "hash_hunter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
rand = "0.8"
secp256k1 = { version = "0.30.0", features = ["rand"] }
sha3 = "0.10"
hex = "0.4.3"
dashmap = "6.1.0"
rayon = "1.10.0"
num_cpus = "1.16.0"
colored = "2.0.0"
indicatif = "0.17.8"
serde_json = "1.0.128"
regex = "1.11.0"
chrono = "0.4.38"
