[package]
name = "hash_hunter"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
rand = "0.8.5"
secp256k1 = { version = "0.30.0", features = ["rand"] }
sha3 = "0.10.8"
hex = "0.4.3"
dashmap = "6.1.0"
rayon = "1.10.0"
num_cpus = "1.16.0"
colored = "2.1.0"
indicatif = "0.17.9"
serde_json = "1.0.133"
regex = "1.11.1"
chrono = "0.4.38"
config = "0.14"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.33"
bytes = "1.8.0"
checksum = "0.2.1"
